assets/css/style.css
/*---------------------------------------Fonts*/

@import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');

@font-face {
    font-family: 'gloss';
    src:    url('../fonts/Gloss.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'meatbuckets';
    src: url('../fonts/meatbuckets.ttf') format('truetype');
    font-weight:normal;
    font-style: normal;
}
@font-face {
    font-family: 'darkheart';
    src: url('../fonts/DarkHeart.otf') format('opentype');
    font-weight:normal;
    font-style: normal; 
}
@font-face {
    font-family: 'Run';
    src: url('../fonts/Run.ttf') format('truetype');
    font-weight:normal;
    font-style: normal;
}

/*---------------------------------------Heading*/

header {
    margin: 0;
    }
.heading{
    height: 70px;
    width: 100%;
    
}
.header-bar {
    padding: 0;
    background-color:#333333 ;
    height:70px;
}

.menu-heading-left {
    display: inline-block;
    height: 65px;
    width: 40%;
    padding-right: 0px;
    padding-top: 15px;
    padding-bottom: 5px;
}
.menu-heading-left ul {
    display: flex;
    justify-content: space-between;
}
#nav-left {
    padding-top: 5px;
    padding-left: 10px;
    padding-bottom: 20px;
}


.menu-heading-right {
    display: inline-block;
    height: 65px;
    width:30%;
    padding-left: 0px;
    padding-right: 15px;
    padding-top: 15px;
    padding-bottom: 5px;
}
#nav-right {
    padding-top: 5px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 15px;
}
.menu-heading-right ul {
    display: flex;
    justify-content: space-between;
}


.logo-header {
    width: 20%;
    text-align: center;
    padding-top: 2px;
}

#logo-header {
    position: relative;
    max-height: 60px;
    max-width: 150px;
}

.list-inline>li a {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    letter-spacing: 1px;
    font-weight: 400;
    color: #fafafa;
    font-size: 20px;
    padding-top: 30px;
    padding-left: 10px;
}
#calendar {
    color: #fafafa;
}

/*---------------------------------------Hero Image*/
.container-fluid {
    padding: 0;
}
.hero-image-box {
    display: block;
    position: relative;
    padding: none;
}
.hero-image-box img {
    width:100%;
    height: auto;
    padding-bottom: 90px;
    vertical-align: top;
}
/*---------------------------------------About us Section*/
.Aboutus-section {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: #1b1c1b;
    text-align: justify;
}
.section-header {
    font-family: gloss;
    width:100%;
    letter-spacing: 3px;
    color: #1b1c1b;
    font-size: 5em;
    text-align: center;
    padding-top:2.5%;
    padding-bottom:80px;
}
#about-workouts, #about-movement, #about-community {
    font-family: gloss;
    letter-spacing: 3px;
    color: #1b1c1b;
    font-size: 2em;
    text-align: center;
    padding-top:10%;
}
.aboutus-item p {
    padding-top: 10px;
    padding-right: 30px;
    padding-left: 30px;
}

/*---------------------------------------Gallery Section*/

.row-gallery {
   padding-top: 60px;
   padding-bottom:50px;
}
.gallery-image-col {
    padding: 0;
}
.gallery-image-col ul{
    max-width: 100%;
    list-style: none;
    justify-content: center;
}
#gallery-section img {
    max-width: 95%;
    padding-bottom: 60px;
}

/*---------------------------------------Prices Section*/
.card-deck {
    justify-content: space-evenly;
    margin-left: 15px;
    margin-right: 15px;
}
.card {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 18px;
    max-width: 250px;
}
.card-title {
    font-family: gloss, sans-serif;
    color: #ffffff;
    padding-top: 15px;
    text-align: center;
    background-color: #333333;
    margin:0;
    height: 50px;
}
.card-footer {
    text-align: center;
}

.pricing-row {
    width: 100%;
    display: inline-block;

}

.pricing-items {
    padding-top: 50px;
    float: none;
    padding-right: 0;
}

.subheader-box {
    height: 80px;
    background-color: #333333;
    
}
.pricing-box h3 {
    font-family: gloss, Roboto;
    color: #fafafa;
    background-color: #333333;
    margin: 0;
    text-align: center;
    height: 100%;
    padding-top:30px;
    
}

.pricing-box {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: lighter;
    font-size: 16pt;
    letter-spacing: 0.75px;
    display: inline-block;
    border:#1b1c1b;
    border-width: 2px;
    border-style: solid;
    padding: 0;
    margin-left: 4.5%;
}

.card-body ul {
    height: 60%;
    line-height: 45px;
    text-align:center;
    padding-top: 0;
    padding-left:0;
    margin-bottom: 0;
}

.card-body ul li {
    padding-left: 7px;
}

.card-body ul li::marker {
    content: "\2713";
    color: #1b1c1b;
}

.jumbotron {
    font-size: 10px;
    background-color: #e6e6e6;
    margin:3em;
    padding: 0.5em;
}
.display-4 {
    font-size: 10pt;
    font-weight: 400;
}
.jumbotron p {
    font-size: 8pt;
}
/*---------------------------------------Contact Us & Map Section*/
.contactus-box {
        max-width: 80%;
        height: 400px;
        background-image: url(../images/gym11.jpg);
        background-repeat:no-repeat;
        background-size:cover;
        background-position: top;
        margin-left: 100px;
        margin-right: 0;
        border-style: solid;
        border-color: #1b1c1b;
        border-width: 2px;
}
.form-column {
    margin-left: 8em;
    
}
.form-column form {
    background-image: url(../images/gym11.jpg);
    background-size: cover;
    height:400px;
    padding: 30px;
    padding-top:40px;
    border: 1px solid;
    border-color: rgba(0,0,0,.125);
    max-width: 625px;
    }

.form-column input {
    opacity: 80%;
}


#inputmessage3 {
    height: 200px;
}

 /* Always set the map height explicitly to define the size of the div
       * element that contains the map. */
      #map {
        height: 100%;
      }
      /* Optional: Makes the sample page fill the window. */
      html, body {
        height: 100%;
        margin: 0;
        padding: 0;
      }





/*----------------------------------Media Queries*/


@media screen and (max-width: 768px) {
.menu-heading-col {
    width: 40%;
    text-align: left;
    padding-top: 10px;
    margin-left: 15px;
}
.logo-header img {
    width: 50%;
}
#logo-header {
    max-width: 90px;
    padding-top: 5px;

}
.menu-heading-calendar {
    width: 50%;
    padding-top: 18px;
    text-align: right;
    
}
.menu-heading-calendar img {
    max-height:50px;
    max-width: 35px;
    align-self: right;
}

.section-header {
    font-family: gloss;
    letter-spacing: 3px;
    color: #000000;
    font-size:2.5em;
}
#gallery-section img {
    max-width: 90%;
    padding-bottom: 30px;
    padding-left: 1.5em;
}
.card {
    margin-left: 20px;
}

.jumbotron {
    padding: 1em;
}
}
.contactus-form {
    max-height: 350px;
    margin-left: 10%;
}
.form-column {
    margin: 0;
    
}
.form-column form {
    height: 500px;
}

